<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/keep_runnig_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_desc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etNome"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="text"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etNomeUsuario"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="text"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpf_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etCpf"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="text"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etSenha"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etPeso"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etAltura"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idade_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etIdade"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="number"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/etDistancia"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/button_secondary"
                    android:textColor="@color/white"
                    android:onClick="OnClickCriarConta" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="40dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
